// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal customization should be supported 1`] = `
"<div class=\\"wrapper test-class  wrapper-enter\\" role=\\"dialog\\" aria-modal=\\"true\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><div class=\\"modal-header auto-margin\\">Modal<style>
        .modal-header {
          display: flex;
          flex-shrink: 0;
          justify-content: center;
          align-items: center;
          overflow: hidden;
          color: inherit;
          background-color: inherit;
          font-size: 0.875rem;
          padding: 8pt calc(16pt + 0.25rem);
          border-bottom-left-radius: 14px;
          border-bottom-right-radius: 14px;
        }
        .auto-margin > :global(*:first-child) {
          margin-top: 0;
        }
        .auto-margin > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style></div><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            max-width: 100%;
            vertical-align: middle;
            overflow: hidden;
            display: flex;
            flex-direction: column;
            position: relative;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: 14px;
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15);
            opacity: 0;
            outline: none;
            transform: translate3d(0px, 15px, 0px) scale(0.9);
            transition: opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0s,
              transform 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0s;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(0px, 15px, 0px) scale(0.9);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px) scale(1);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px) scale(1);
          }
          .wrapper-leave-active {
            opacity: 0;
            transform: translate3d(0px, 15px, 0px) scale(0.9);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div>"
`;

exports[`Modal should render correctly 1`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper   wrapper-enter\\" role=\\"dialog\\" aria-modal=\\"true\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><div class=\\"modal-header auto-margin\\">Modal<style>
        .modal-header {
          display: flex;
          flex-shrink: 0;
          justify-content: center;
          align-items: center;
          overflow: hidden;
          color: inherit;
          background-color: inherit;
          font-size: 0.875rem;
          padding: 8pt calc(16pt + 0.25rem);
          border-bottom-left-radius: 14px;
          border-bottom-right-radius: 14px;
        }
        .auto-margin > :global(*:first-child) {
          margin-top: 0;
        }
        .auto-margin > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style></div><div class=\\"modal-body auto-margin\\"><p>Some content contained within the modal.</p></div><style>
        .modal-body {
          flex: 1 1 auto;
          padding: 8pt calc(16pt + 0.25rem);
          position: relative;
          text-align: left;
        }
        .auto-margin > :global(*:first-child) {
          margin-top: 0;
        }
        .auto-margin > :global(*) {
          margin-bottom: 1rem;
        }
        .auto-margin > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style><div class=\\"modal-footer auto-margin\\">Cancel<style>
        .modal-footer {
          display: flex;
          flex-wrap: wrap;
          flex-shrink: 0;
          overflow: hidden;
          color: inherit;
          align-items: center;
          background-color: inherit;
          font-size: 0.875rem;
          padding: 8pt 16pt;
          justify-content: flex-end;
          border-bottom-left-radius: 14px;
          border-bottom-right-radius: 14px;
        }
        .auto-margin > :global(*) {
          margin: 0.25rem;
        }
      </style></div><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            max-width: 100%;
            vertical-align: middle;
            overflow: hidden;
            display: flex;
            flex-direction: column;
            position: relative;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: 14px;
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15);
            opacity: 0;
            outline: none;
            transform: translate3d(0px, 15px, 0px) scale(0.9);
            transition: opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0s,
              transform 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0s;
          }
          .wrapper-enter {
            opacity: 0;
            transform: translate3d(0px, 15px, 0px) scale(0.9);
          }
          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px) scale(1);
          }
          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px) scale(1);
          }
          .wrapper-leave-active {
            opacity: 0;
            transform: translate3d(0px, 15px, 0px) scale(0.9);
          }
          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              overflow: auto;
              z-index: 1000;
              -webkit-overflow-scrolling: touch;
              box-sizing: border-box;
              text-align: center;
            }

            .content {
              position: relative;
              z-index: 1001;
              outline: none;
              max-width: 90%;
              width: 26rem;
              margin: 20px auto;
              vertical-align: middle;
              display: inline-block;
            }

            .backdrop:before {
              display: inline-block;
              width: 0;
              height: 100%;
              vertical-align: middle;
              content: '';
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;
